--- a/0724/0724日报.md
+++ b/0724/0724日报.md
@@ -21,7 +21,8 @@
 
 * 已完成
 1. 安装好eclipse
-2. 
+2. 并使用eclipse完成java两个任务
+3. 完成c++任务
 
 
 
@@ -40,4 +41,4 @@
 
 ## 未解决的问题
 
-1. 关于java文件的创建过程需要命名的地方不大清楚是具体命名的是什么？
+1. 关于.java文件的创建过程需要命名的地方不大清楚是具体命名的是什么？
