--- a/0808/0808日报.md
+++ b/0808/0808日报.md
@@ -31,6 +31,8 @@
 * 任务完成
 1. 利用pymysql连接数据库，实现增删查改
 
+[增删查改代码链接](https://github.com/zhaixiujie/summer-training-/blob/master/0808/mysql1.py)
+
 ![原来的图](https://github.com/zhaixiujie/summer-training-/blob/master/0808/%E5%8E%9F%E6%9D%A5%E7%9A%84%E8%A1%A8.PNG)
 
 ![后来的图](https://github.com/zhaixiujie/summer-training-/blob/master/0808/%E5%A2%9E%E5%88%A0%E6%9F%A5%E6%94%B9%E5%90%8E%E7%9A%84%E8%A1%A8%E6%A0%BC.PNG)
